# StefansAngularApp

./: README.md  angular.json  db.json  docker-compose.yml  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile  house.sqlite
backend/migrations/2023-05-28-142855_houses/: down.sql
backend/src/: api.rs  lib.rs  main.rs  models.rs  schema.rs
backend/tests/: api_integrations_tests.rs
frontend/: Dockerfile  nginx.conf  proxy.conf.json
frontend/src/: index.html
frontend/src/app/: housing.service.ts  routes.ts
frontend/src/app/create-home/: create-home.component.ts
frontend/src/app/home/: home.component.ts
kubernetes/: deploy.sh  housing-backend.yaml  housing-frontend.yaml  ingress-controller.yaml  ingress.yaml  nginx-config.yaml  restart.sh
server/: .env  Cargo.toml  house.sqlite
server/migrations/2023-05-28-142855_houses/: up.sql
server/src/: api.rs  lib.rs  main.rs  models.rs  schema.rs
src/: index.html
src/app/: app.component.css  app.component.ts  housing.service.ts  housinglocation.ts
src/app/create-home/: create-home.component.css
src/app/details/: details.component.css  details.component.ts
src/app/home/: home.component.css  home.component.ts
src/app/housing-location/: housing-location.component.ts
src/app/tests/: sum.test.js
