[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "my-binary"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
ccase = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite","chrono"] }
smartcore = {version = "0.3.0", features=["serde"]}
dotenvy = "0.15"
kv-derive = "1.0.1"
proc-macro-error = "1.0.4"
rocket = "0.4.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.151"
serde_json = "1.0.93"
rocket_contrib = { version = "0.4.11", features = ["json"] }
cargo-watch = "8.3.0"
rustc-serialize = "0.3.24"
base64 = "0.21.0"
rocket-multipart-form-data = "0.10.5"
uuid = { version = "1.3.0", features = ["v4"] }
mime_guess = "2.0.4"
dirs-2 = "3.0.1"
termion = "2.0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14.24"
hyper-multipart-rfc7578 = "0.8.0"
dirs = "4.0.0"
rocket_cors = "0.5.2"

[[bin]]
name = "my-binary"
path = "src/main.rs"
